--- a/README
+++ b/README
@@ -11,5 +11,5 @@ Step5: Boom, Sit back and Relax! ( The b0t is doing all work for you).
 
 
 Cheers, To thank me :
-Paypal : https://paypal.me/iamrohit/5
+Paypal : https://paypal.me/iamrohitg/5
 Paytm  : 8200805621.
